drivers/card/K2616_Dll.h

int __stdcall K2616_ClearRetainCount(HANDLE ComHandle);
int __stdcall K2616_SelectSocialSecurityApp(HANDLE ComHandle);
int __stdcall K2616_SelectSocialSecurityBasicFile(HANDLE ComHandle);
//int __stdcall K2616_LNSelectSocialSecurityBasicFile(HANDLE ComHandle);
//int __stdcall K2616_LNSelectSocialSecurityDataFile(HANDLE ComHandle);
int __stdcall K2616_ReadSocialSecurityCardID(HANDLE ComHandle,BYTE IDNum[9]);
int __stdcall K2616_ReadSocialSecurityIDNum(HANDLE ComHandle,BYTE IDNum[18]);
int __stdcall K2616_ReadSocialSecurityName(HANDLE ComHandle,BYTE Name[30]);
int __stdcall K2616_ReadSocialSecurityGender(HANDLE ComHandle,BYTE *Sex);
int __stdcall K2616_ReadSocialSecurityNation(HANDLE ComHandle,BYTE *Nation);
int __stdcall K2616_ReadSocialSecurityRegional(HANDLE ComHandle,BYTE Regional[3]);
int __stdcall K2616_ReadSocialSecurityBirthDay(HANDLE ComHandle,BYTE BirthDay[4]);
int __stdcall K2616_ReadSocialSecurityInfo(HANDLE ComHandle,BYTE IDNum[18],BYTE Name[30],BYTE *Sex,BYTE *Nation,BYTE Regional[3],BYTE BirthDay[4]);
int __stdcall K2616_AutoReadSocialSecurityInfo(HANDLE ComHandle,BYTE IDNum[18],BYTE Name[30],BYTE *Sex,BYTE *Nation,BYTE Regional[3],BYTE BirthDay[4]);
int __stdcall K2616_AutoReadSocialSecurityCardID(HANDLE ComHandle,BYTE CardID[9]);
int __stdcall K2616_AutoReadSocialSecurityInfoAndCardID(HANDLE ComHandle,BYTE IDNum[18],BYTE Name[30],BYTE *Sex,BYTE *Nation,BYTE Regional[3],BYTE BirthDay[4],BYTE CardID[9]);
int __stdcall K2616_CPUTypeBCardPowerOn(HANDLE ComHandle, BYTE szATR[]);
int __stdcall K2616_CPUTypeBAPDU(HANDLE ComHandle, BYTE SCH, int _dataLen, BYTE _APDUData[], BYTE* RCH,BYTE _exData[], int *_exdataLen);