apsp-client-sdk/src/test/java/com/zmcsoft/apsp/client/K2616_DllLibrary.java

	/**
	 * Original signature : <code>int K2616_ClearRetainCount(HANDLE)</code><br>
	 * <i>native declaration : drivers\card\K2616_Dll.h:216</i>
	 */
	int K2616_ClearRetainCount(HANDLE ComHandle);
	/**
	 * Original signature : <code>int K2616_SelectSocialSecurityApp(HANDLE)</code><br>
	 * <i>native declaration : drivers\card\K2616_Dll.h:218</i>
	 */
	int K2616_SelectSocialSecurityApp(HANDLE ComHandle);
	/**
	 * Original signature : <code>int K2616_SelectSocialSecurityBasicFile(HANDLE)</code><br>
	 * <i>native declaration : drivers\card\K2616_Dll.h:219</i>
	 */
	int K2616_SelectSocialSecurityBasicFile(HANDLE ComHandle);
	/**
	 * int __stdcall K2616_LNSelectSocialSecurityDataFile(HANDLE ComHandle);<br>
	 * Original signature : <code>int K2616_ReadSocialSecurityCardID(HANDLE, BYTE[9])</code><br>
	 * <i>native declaration : drivers\card\K2616_Dll.h:222</i><br>
	 * @deprecated use the safer methods {@link #K2616_ReadSocialSecurityCardID(k2616_dll.K2616_DllLibrary.HANDLE, ByteBuffer)} and {@link #K2616_ReadSocialSecurityCardID(k2616_dll.K2616_DllLibrary.HANDLE, Pointer)} instead
	 */
	@Deprecated 
	int K2616_ReadSocialSecurityCardID(HANDLE ComHandle, Pointer IDNum);
	/**
	 * int __stdcall K2616_LNSelectSocialSecurityDataFile(HANDLE ComHandle);<br>
	 * Original signature : <code>int K2616_ReadSocialSecurityCardID(HANDLE, BYTE[9])</code><br>
	 * <i>native declaration : drivers\card\K2616_Dll.h:222</i>
	 */
	int K2616_ReadSocialSecurityCardID(HANDLE ComHandle, ByteBuffer IDNum);
	/**
	 * Original signature : <code>int K2616_ReadSocialSecurityIDNum(HANDLE, BYTE[18])</code><br>
	 * <i>native declaration : drivers\card\K2616_Dll.h:223</i><br>
	 * @deprecated use the safer methods {@link #K2616_ReadSocialSecurityIDNum(k2616_dll.K2616_DllLibrary.HANDLE, ByteBuffer)} and {@link #K2616_ReadSocialSecurityIDNum(k2616_dll.K2616_DllLibrary.HANDLE, Pointer)} instead
	 */
	@Deprecated 
	int K2616_ReadSocialSecurityIDNum(HANDLE ComHandle, Pointer IDNum);
	/**
	 * Original signature : <code>int K2616_ReadSocialSecurityIDNum(HANDLE, BYTE[18])</code><br>
	 * <i>native declaration : drivers\card\K2616_Dll.h:223</i>
	 */
	int K2616_ReadSocialSecurityIDNum(HANDLE ComHandle, ByteBuffer IDNum);
	/**
	 * Original signature : <code>int K2616_ReadSocialSecurityName(HANDLE, BYTE[30])</code><br>
	 * <i>native declaration : drivers\card\K2616_Dll.h:224</i><br>
	 * @deprecated use the safer methods {@link #K2616_ReadSocialSecurityName(k2616_dll.K2616_DllLibrary.HANDLE, ByteBuffer)} and {@link #K2616_ReadSocialSecurityName(k2616_dll.K2616_DllLibrary.HANDLE, Pointer)} instead
	 */
	@Deprecated 
	int K2616_ReadSocialSecurityName(HANDLE ComHandle, Pointer Name);
	/**
	 * Original signature : <code>int K2616_ReadSocialSecurityName(HANDLE, BYTE[30])</code><br>
	 * <i>native declaration : drivers\card\K2616_Dll.h:224</i>
	 */
	int K2616_ReadSocialSecurityName(HANDLE ComHandle, ByteBuffer Name);
	/**
	 * Original signature : <code>int K2616_ReadSocialSecurityGender(HANDLE, BYTE*)</code><br>
	 * <i>native declaration : drivers\card\K2616_Dll.h:225</i><br>
	 * @deprecated use the safer methods {@link #K2616_ReadSocialSecurityGender(k2616_dll.K2616_DllLibrary.HANDLE, ByteBuffer)} and {@link #K2616_ReadSocialSecurityGender(k2616_dll.K2616_DllLibrary.HANDLE, Pointer)} instead
	 */
	@Deprecated 
	int K2616_ReadSocialSecurityGender(HANDLE ComHandle, Pointer Sex);
	/**
	 * Original signature : <code>int K2616_ReadSocialSecurityGender(HANDLE, BYTE*)</code><br>
	 * <i>native declaration : drivers\card\K2616_Dll.h:225</i>
	 */
	int K2616_ReadSocialSecurityGender(HANDLE ComHandle, ByteBuffer Sex);
	/**
	 * Original signature : <code>int K2616_ReadSocialSecurityNation(HANDLE, BYTE*)</code><br>
	 * <i>native declaration : drivers\card\K2616_Dll.h:226</i><br>
	 * @deprecated use the safer methods {@link #K2616_ReadSocialSecurityNation(k2616_dll.K2616_DllLibrary.HANDLE, ByteBuffer)} and {@link #K2616_ReadSocialSecurityNation(k2616_dll.K2616_DllLibrary.HANDLE, Pointer)} instead
	 */
	@Deprecated 
	int K2616_ReadSocialSecurityNation(HANDLE ComHandle, Pointer Nation);
	/**
	 * Original signature : <code>int K2616_ReadSocialSecurityNation(HANDLE, BYTE*)</code><br>
	 * <i>native declaration : drivers\card\K2616_Dll.h:226</i>
	 */
	int K2616_ReadSocialSecurityNation(HANDLE ComHandle, ByteBuffer Nation);
	/**
	 * Original signature : <code>int K2616_ReadSocialSecurityRegional(HANDLE, BYTE[3])</code><br>
	 * <i>native declaration : drivers\card\K2616_Dll.h:227</i><br>
	 * @deprecated use the safer methods {@link #K2616_ReadSocialSecurityRegional(k2616_dll.K2616_DllLibrary.HANDLE, ByteBuffer)} and {@link #K2616_ReadSocialSecurityRegional(k2616_dll.K2616_DllLibrary.HANDLE, Pointer)} instead
	 */
	@Deprecated 
	int K2616_ReadSocialSecurityRegional(HANDLE ComHandle, Pointer Regional);
	/**
	 * Original signature : <code>int K2616_ReadSocialSecurityRegional(HANDLE, BYTE[3])</code><br>
	 * <i>native declaration : drivers\card\K2616_Dll.h:227</i>
	 */
	int K2616_ReadSocialSecurityRegional(HANDLE ComHandle, ByteBuffer Regional);
	/**
	 * Original signature : <code>int K2616_ReadSocialSecurityBirthDay(HANDLE, BYTE[4])</code><br>
	 * <i>native declaration : drivers\card\K2616_Dll.h:228</i><br>
	 * @deprecated use the safer methods {@link #K2616_ReadSocialSecurityBirthDay(k2616_dll.K2616_DllLibrary.HANDLE, ByteBuffer)} and {@link #K2616_ReadSocialSecurityBirthDay(k2616_dll.K2616_DllLibrary.HANDLE, Pointer)} instead
	 */
	@Deprecated 
	int K2616_ReadSocialSecurityBirthDay(HANDLE ComHandle, Pointer BirthDay);
	/**
	 * Original signature : <code>int K2616_ReadSocialSecurityBirthDay(HANDLE, BYTE[4])</code><br>
	 * <i>native declaration : drivers\card\K2616_Dll.h:228</i>
	 */
	int K2616_ReadSocialSecurityBirthDay(HANDLE ComHandle, ByteBuffer BirthDay);
	/**
	 * Original signature : <code>int K2616_ReadSocialSecurityInfo(HANDLE, BYTE[18], BYTE[30], BYTE*, BYTE*, BYTE[3], BYTE[4])</code><br>
	 * <i>native declaration : drivers\card\K2616_Dll.h:229</i><br>
	 * @deprecated use the safer methods {@link #K2616_ReadSocialSecurityInfo(k2616_dll.K2616_DllLibrary.HANDLE, ByteBuffer, ByteBuffer, ByteBuffer, ByteBuffer, ByteBuffer, ByteBuffer)} and {@link #K2616_ReadSocialSecurityInfo(k2616_dll.K2616_DllLibrary.HANDLE, Pointer, Pointer, Pointer, Pointer, Pointer, Pointer)} instead
	 */
	@Deprecated 
	int K2616_ReadSocialSecurityInfo(HANDLE ComHandle, Pointer IDNum, Pointer Name, Pointer Sex, Pointer Nation, Pointer Regional, Pointer BirthDay);
	/**
	 * Original signature : <code>int K2616_ReadSocialSecurityInfo(HANDLE, BYTE[18], BYTE[30], BYTE*, BYTE*, BYTE[3], BYTE[4])</code><br>
	 * <i>native declaration : drivers\card\K2616_Dll.h:229</i>
	 */
	int K2616_ReadSocialSecurityInfo(HANDLE ComHandle, ByteBuffer IDNum, ByteBuffer Name, ByteBuffer Sex, ByteBuffer Nation, ByteBuffer Regional, ByteBuffer BirthDay);
	/**
	 * Original signature : <code>int K2616_AutoReadSocialSecurityInfo(HANDLE, BYTE[18], BYTE[30], BYTE*, BYTE*, BYTE[3], BYTE[4])</code><br>
	 * <i>native declaration : drivers\card\K2616_Dll.h:230</i><br>
	 * @deprecated use the safer methods {@link #K2616_AutoReadSocialSecurityInfo(k2616_dll.K2616_DllLibrary.HANDLE, ByteBuffer, ByteBuffer, ByteBuffer, ByteBuffer, ByteBuffer, ByteBuffer)} and {@link #K2616_AutoReadSocialSecurityInfo(k2616_dll.K2616_DllLibrary.HANDLE, Pointer, Pointer, Pointer, Pointer, Pointer, Pointer)} instead
	 */
	@Deprecated 
	int K2616_AutoReadSocialSecurityInfo(HANDLE ComHandle, Pointer IDNum, Pointer Name, Pointer Sex, Pointer Nation, Pointer Regional, Pointer BirthDay);
	/**
	 * Original signature : <code>int K2616_AutoReadSocialSecurityInfo(HANDLE, BYTE[18], BYTE[30], BYTE*, BYTE*, BYTE[3], BYTE[4])</code><br>
	 * <i>native declaration : drivers\card\K2616_Dll.h:230</i>
	 */
	int K2616_AutoReadSocialSecurityInfo(HANDLE ComHandle, ByteBuffer IDNum, ByteBuffer Name, ByteBuffer Sex, ByteBuffer Nation, ByteBuffer Regional, ByteBuffer BirthDay);
	/**
	 * Original signature : <code>int K2616_AutoReadSocialSecurityCardID(HANDLE, BYTE[9])</code><br>
	 * <i>native declaration : drivers\card\K2616_Dll.h:231</i><br>
	 * @deprecated use the safer methods {@link #K2616_AutoReadSocialSecurityCardID(k2616_dll.K2616_DllLibrary.HANDLE, ByteBuffer)} and {@link #K2616_AutoReadSocialSecurityCardID(k2616_dll.K2616_DllLibrary.HANDLE, Pointer)} instead
	 */
	@Deprecated 
	int K2616_AutoReadSocialSecurityCardID(HANDLE ComHandle, Pointer CardID);
	/**
	 * Original signature : <code>int K2616_AutoReadSocialSecurityCardID(HANDLE, BYTE[9])</code><br>
	 * <i>native declaration : drivers\card\K2616_Dll.h:231</i>
	 */
	int K2616_AutoReadSocialSecurityCardID(HANDLE ComHandle, ByteBuffer CardID);
	/**
	 * Original signature : <code>int K2616_AutoReadSocialSecurityInfoAndCardID(HANDLE, BYTE[18], BYTE[30], BYTE*, BYTE*, BYTE[3], BYTE[4], BYTE[9])</code><br>
	 * <i>native declaration : drivers\card\K2616_Dll.h:232</i><br>
	 * @deprecated use the safer methods {@link #K2616_AutoReadSocialSecurityInfoAndCardID(k2616_dll.K2616_DllLibrary.HANDLE, ByteBuffer, ByteBuffer, ByteBuffer, ByteBuffer, ByteBuffer, ByteBuffer, ByteBuffer)} and {@link #K2616_AutoReadSocialSecurityInfoAndCardID(k2616_dll.K2616_DllLibrary.HANDLE, Pointer, Pointer, Pointer, Pointer, Pointer, Pointer, Pointer)} instead
	 */
	@Deprecated 
	int K2616_AutoReadSocialSecurityInfoAndCardID(HANDLE ComHandle, Pointer IDNum, Pointer Name, Pointer Sex, Pointer Nation, Pointer Regional, Pointer BirthDay, Pointer CardID);
	/**
	 * Original signature : <code>int K2616_AutoReadSocialSecurityInfoAndCardID(HANDLE, BYTE[18], BYTE[30], BYTE*, BYTE*, BYTE[3], BYTE[4], BYTE[9])</code><br>
	 * <i>native declaration : drivers\card\K2616_Dll.h:232</i>
	 */
	int K2616_AutoReadSocialSecurityInfoAndCardID(HANDLE ComHandle, ByteBuffer IDNum, ByteBuffer Name, ByteBuffer Sex, ByteBuffer Nation, ByteBuffer Regional, ByteBuffer BirthDay, ByteBuffer CardID);
	/**
	 * Original signature : <code>int K2616_CPUTypeBCardPowerOn(HANDLE, BYTE[])</code><br>
	 * <i>native declaration : drivers\card\K2616_Dll.h:233</i><br>
	 * @deprecated use the safer methods {@link #K2616_CPUTypeBCardPowerOn(k2616_dll.K2616_DllLibrary.HANDLE, ByteBuffer)} and {@link #K2616_CPUTypeBCardPowerOn(k2616_dll.K2616_DllLibrary.HANDLE, Pointer)} instead
	 */
	@Deprecated 
	int K2616_CPUTypeBCardPowerOn(HANDLE ComHandle, Pointer szATR);
	/**
	 * Original signature : <code>int K2616_CPUTypeBCardPowerOn(HANDLE, BYTE[])</code><br>
	 * <i>native declaration : drivers\card\K2616_Dll.h:233</i>
	 */
	int K2616_CPUTypeBCardPowerOn(HANDLE ComHandle, ByteBuffer szATR);
	/**
	 * Original signature : <code>int K2616_CPUTypeBAPDU(HANDLE, BYTE, int, BYTE[], BYTE*, BYTE[], int*)</code><br>
	 * <i>native declaration : drivers\card\K2616_Dll.h:234</i><br>
	 * @deprecated use the safer methods {@link #K2616_CPUTypeBAPDU(k2616_dll.K2616_DllLibrary.HANDLE, byte, int, ByteBuffer, ByteBuffer, ByteBuffer, IntBuffer)} and {@link #K2616_CPUTypeBAPDU(k2616_dll.K2616_DllLibrary.HANDLE, byte, int, Pointer, Pointer, Pointer, IntByReference)} instead
	 */
	@Deprecated 
	int K2616_CPUTypeBAPDU(HANDLE ComHandle, byte SCH, int _dataLen, Pointer _APDUData, Pointer RCH, Pointer _exData, IntByReference _exdataLen);
	/**
	 * Original signature : <code>int K2616_CPUTypeBAPDU(HANDLE, BYTE, int, BYTE[], BYTE*, BYTE[], int*)</code><br>
	 * <i>native declaration : drivers\card\K2616_Dll.h:234</i>
	 */
	int K2616_CPUTypeBAPDU(HANDLE ComHandle, byte SCH, int _dataLen, ByteBuffer _APDUData, ByteBuffer RCH, ByteBuffer _exData, IntBuffer _exdataLen);
	public static class HANDLE extends PointerType {
		public HANDLE(Pointer address) {
			super(address);
		}
		public HANDLE() {
			super();
		}
	};
}
